# decaf-emu

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  conanfile.py  decaf.sln  vcpkg.json  vsdebuggervis.natvis  wiiu.sln
libraries/: CMakeLists.txt  bin2c.cmake
resources/: CMakeLists.txt  decaf-sdl.rc
resources/shaders/: screen_pixel.glsl  screen_vertex.glsl  screendraw.hlsl  wiiu_fallback.hlsl  wiiu_tmp_simple.hlsl
src/: CMakeLists.txt  analyzer.cpp  be_val.h  be_vec.h  bigendianview.h  bitutils.h  codetests.cpp  codetests.h  config.cpp  config.h  crc32.cpp  crc32.h  debugcontrol.cpp  debugcontrol.h  debugger.cpp  debugger.h  debugmsg.h  debugnet.cpp  debugnet.h  decaf_buildinfo.h.in  decaf_game.h  disassembler.cpp  disassembler.h  elf.cpp  elf.h  emulog.cpp  emulog.h  expandedheapmanager.cpp  expandedheapmanager.h  filesystem.h  floatutils.h  frameheapmanager.cpp  frameheapmanager.h  fuzztests.cpp  fuzztests.h  hardwaretests.cpp  hardwaretests.h  heapmanager.h  hostlookup.h  instruction.h  (+57 more)
src/common/: CMakeLists.txt  align.h  atomicqueue.h  be_array.h  be_ptr.h  be_val.h  be_vec.h  be_volatile.h  bigendianview.h  binaryfile.h  binaryview.h  bit_cast.h  bitfield.h  bitutils.h  byte_swap.h  byte_swap_array.h  cbool.h  cerealjsonoptionalinput.h  common.natvis  configstorage.h  count_of.h  datahash.h  debuglog.h  decaf_assert.h  emuassert.h  enum_end.h  enum_end.inl  enum_start.h  enum_start.inl  enum_string_declare.h  enum_string_declare.inl  enum_string_define.h  fastregionmap.h  fixed.h  floatutils.h  frameallocator.h  gl.h  log.h  make_array.h  murmur3.h  (+27 more)
src/common-sdl/: CMakeLists.txt  decafsdl_config.cpp  decafsdl_config.h  decafsdl_graphics.h  decafsdl_opengl.cpp  decafsdl_opengl.h  decafsdl_sound.cpp  decafsdl_vulkan.cpp  decafsdl_vulkan.h  decafsdl_vulkan_shaders.h
src/cpu/: CMakeLists.txt  cpu.cpp  cpu.h  cpu_breakpoints.cpp  cpu_internal.h  cpu_interrupts.cpp  cpu_kc.cpp  cpu_registers.h  disassembler.cpp  instruction.h  instructiondata.h  instructionfields.inl  instructions.inl  instructiontable.cpp  mem.cpp  mem.h  state.h  statedbg.h  trace.cpp  trace.h  utils.h
src/debugger/: CMakeLists.txt  debugger_ui.cpp  debugger_ui.h  debugger_ui_draw.cpp
src/decaf/: CMakeLists.txt  decaf.cpp  decaf.h  decaf_input.h
src/decaf-cli/: CMakeLists.txt  clilog.h  config.cpp  config.h  decafcli.cpp  decafcli.h  decafsdl.cpp  decafsdl.h  gl_common.cpp  gl_common.h  input_common.h  main.cpp  main_glfw.cpp  main_sdl.cpp
src/decaf-pm4-replay/: main.cpp  sdl_window.cpp  sdl_window.h  sdl_window_draw.cpp
src/decaf-qt/: CMakeLists.txt  aboutdialog.h  decafinterface.cpp  decafinterface.h  gamelist.cpp  gamelist.h  gamelistp.h  gamelistworker.cpp  gamelistworker.h  inputdriver.cpp  inputeventfilter.h  main.cpp  mainwindow.cpp  mainwindow.h  qvulkanwindow2.cpp  qvulkanwindow2.h  resources.qrc  settings.cpp  settings.h  softwarekeyboarddriver.cpp  sounddriver.h  tga.cpp  tga.h  vulkanwindow.cpp
src/decaf-sdl/: CMakeLists.txt  config.cpp  config.h  decafsdl.cpp  decafsdl.h  decafsdl_draw.cpp  decafsdl_dx12.cpp  decafsdl_dx12.h  decafsdl_graphics.cpp  decafsdl_graphics.h  decafsdl_input.cpp  decafsdl_opengl.cpp  decafsdl_opengl.h  decafsdl_posix.cpp  decafsdl_sound.cpp  decafsdl_sound.h  decafsdl_vulkan.cpp  decafsdl_vulkan.h  decafsdl_win.cpp  hidpi.manifest  main.cpp
src/filesystem/: CMakeLists.txt  filesystem.h  filesystem_file.h  filesystem_filehandle.h  filesystem_folder.h  filesystem_folderhandle.h  filesystem_host_file.h  filesystem_host_filehandle.h  filesystem_host_folder.h  filesystem_host_folderhandle.h  filesystem_host_path.h  filesystem_link_file.h  filesystem_link_folder.h  filesystem_node.h  filesystem_path.h  filesystem_posix_host_folder.cpp  filesystem_posix_host_folderhandle.cpp  filesystem_virt_file.h  filesystem_virt_folder.h  filesystem_virtual_file.h  filesystem_virtual_filehandle.h  filesystem_virtual_folder.h  filesystem_virtual_folderhandle.h  filesystem_win_file.h  filesystem_win_folder.h  filesystem_win_host_folder.cpp  filesystem_win_host_folderhandle.cpp  filesystem_win_path.h
src/gfx/: gfx_state.cpp  gfx_state.h
src/gpu/: CMakeLists.txt  commandqueue.cpp  commandqueue.h  driver.cpp  driver.h  gfd.cpp  gfd.h  latte.cpp  latte.h  latte_analyse.cpp  latte_blockify.cpp  latte_contextstate.h  latte_decoder.cpp  latte_disassembler.cpp  latte_disassembler.h  latte_enum_cb.h  latte_enum_common.h  latte_enum_db.h  latte_enum_pa.h  latte_enum_spi.h  latte_enum_sq.h  latte_enum_sx.h  latte_enum_vgt.h  latte_format.cpp  latte_format.h  latte_genhlsl.cpp  latte_instructions.h  latte_opcodes.cpp  latte_opcodes.h  latte_opcodes_def.inl  latte_parser.cpp  latte_parser.h  latte_registers.h  latte_registers_cb.h  latte_registers_db.h  latte_registers_pa.h  latte_registers_spi.h  latte_registers_sq.h  latte_registers_sx.h  latte_registers_td.h  (+15 more)
src/input/: CMakeLists.txt  input.cpp  input.h
src/interpreter/: interpreter_branch.cpp  interpreter_condition.cpp  interpreter_float.cpp  interpreter_float.h  interpreter_integer.cpp  interpreter_loadstore.cpp  interpreter_pairedsingle.cpp  interpreter_system.cpp
src/jit/: jit_branch.cpp  jit_condition.cpp  jit_float.cpp  jit_integer.cpp  jit_loadstore.cpp  jit_pairedsingle.cpp  jit_system.cpp
src/kernel/: CMakeLists.txt  kernel.cpp  kernel.h  kernel_fibers.cpp  kernel_filesystem.cpp  kernel_filesystem.h  kernel_hle.cpp  kernel_hle.h  kernel_hle_modules.cpp  kernel_hledata.h  kernel_hleexport.h  kernel_hlefunction.h  kernel_hlemodule.h  kernel_internal.h
src/libconfig/: CMakeLists.txt  config_excmd.h  config_toml.h
src/libcpu/: CMakeLists.txt  address.h  be2_array.h  be2_atomic.h  be2_struct.h  be2_val.h  bigendianvalue.h  cpu.h  cpu.natvis  cpu_breakpoints.h  cpu_config.h  cpu_control.h  cpu_formatters.h  functionpointer.h  jit_stats.h  mem.h  memtrack.h  mmu.h  pointer.h  state.h  trace.h
tests/: CMakeLists.txt
tools/: CMakeLists.txt  fakevirtualmemory.cpp  fakevirtualmemory.h  gen-glcpp.pl  gfd.cpp  gfd.h  gsh-disassemble.cpp
(+3253 files in other folders)
